--- a/project1/index.html
+++ b/project1/index.html
@@ -85,10 +85,10 @@
 
                     <div id="daysRemaining"></div>
                 </div>
-                <!-- <div class="input-field col s4">
+                <div class="input-field col s4">
                     <input id="date" id="other_form" type="text" class="validate">
                     <label for="date">Date:</label>
-                </div> -->
+                </div>
                 <div class="col s6"></div>
                 <button class="btn waves-effect waves-light" type="submit" name="action">Submit
                     <i class="material-icons right"></i>
@@ -111,7 +111,13 @@
 
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
                 <script type="text/javascript">
-                    $(document).ready(function () {
+                    
+
+                                .then(function (response) {
+                                    var results = response.response.holidays;
+                                    for (var i = 0; i < results.length; i++) {
+                                        if (results[i].name === holidayName) {
+                                    $(document).ready(function () {
                         $("#other_form").hide();
                         // $('.dropdown-trigger').dropdown();
                         $('select').formSelect();
@@ -131,13 +137,7 @@
                             $.ajax({
                                 url: queryURL,
                                 method: "GET"
-                            })
-
-                                .then(function (response) {
-                                    var results = response.response.holidays;
-                                    for (var i = 0; i < results.length; i++) {
-                                        if (results[i].name === holidayName) {
-                                            var date = results[i].date.iso;
+                            })        var date = results[i].date.iso;
                                             var today = new Date();
                                             var occasion_date = new Date(date);
                                             var days_until = Math.round((occasion_date - today) / (1000 * 60 * 60 * 24));
