--- a/project1/sample.html
+++ b/project1/sample.html
@@ -1,87 +1,180 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!--Import Google Icon Font-->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <!-- Compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-<!-- My CSS -->
-    <link rel="stylesheet" href="assets/style.css">
 
-    <!-- Compiled and minified JavaScript -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.0.min.js"
-      integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
+<head>
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <!-- My CSS -->
+  <link rel="stylesheet" href="assets/style.css">
 
-  <header>
-        <div>
-            <div class="col s12">
-                <p class="z-depth-4">Book Em'</p>
-            </div>
-        </div>
-    </header>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.4.0.min.js"
+    integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
 
-    <body class="row wrapper">
-            <div class="col s12">
-                <div class="container">
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <input id="first_name" type="text" class="validate">
-                            <label for="first_name">Author's First Name</label>
-                        </div>
-                        <div class="input-field col s4">
-                            <input id="last_name" type="text" class="validate">
-                            <label for="last_name">Author's Last Name</label>
-                        </div>
-                        <div class="input-field col s4">
-                            <input id="user_name" type="text" class="validate">
-                            <label for="user_name">New York Times Bestsellers</label>
-                        </div>
-
-    <div class="input-field col s12">
-      <select>
-        <option value="">Choose your option</option>
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
-      </select>
-      <label>Materialize Select</label>
+<!-- Project Name! -->
+<header>
+  <div>
+    <div class="col s12">
+      <p class="z-depth-4">Book 'em</p>
     </div>
+  </div>
+</header>
 
-    <div class="col s6"></div>
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-        <i class="material-icons right"></i>
-    </button>
-
-    <div>
-            <div class="col s12">
-                <p class="z-depth-4">Book Selections</p>
-            </div>
-            <br>
-            <div class="col s12">
-                <img class="responsive-img" src="assets/principles.png">
-                <img class="responsive-img" src="assets/theTattooistOfAuschwitz.jpeg">
-                <img class="responsive-img" src="assets/whereTheCrawdadsSing.jpeg">
-                <img class="responsive-img" src="assets/theCityInTheMiddleOfTheNight.jpeg">
-                <img class="responsive-img" src="assets/atTheMountainsEdge.jpeg">
-            </div>
+<!-- Form! -->
+<body class="row wrapper">
+  <div class="col s12">
+    <div class="container">
+      <div class="row">
+        <div class="input-field col s3">
+          <input id="first_name" type="text" class="validate">
+          <label for="first_name">Age Group</label>
+        </div>
+        <div class="input-field col s3">
+          <input id="last_name" type="text" class="validate">
+          <label for="last_name">Price</label>
+        </div>
+        <div class="input-field col s3">
+          <input id="user_name" type="text" class="validate">
+          <label for="user_name">Email Address</label>
         </div>
 
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $("select").formSelect();
-      });
-    </script>
-  </body>
+        <!-- Submit Botton -->
+        <div class="col s3"></div>
+      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <i class="material-icons right"></i>
+      </button>
+
+        <!-- Date Form! -->
+        <div class="input-field col s8">
+
+            <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>When will you need your book?</a>
+
+            <!-- Dropdown Structure -->
+            <ul id='dropdown1' class='dropdown-content'>
+              <li><a href="#" class="dropdown-item" data-name="Valentine's Day">Valentine's Day</a></li>
+              <li><a href="#" class="dropdown-item" data-name="Mother's Day">Mother's Day</a></li>
+              <li><a href="#" class="dropdown-item" data-name="Father's Day">Father's Day</a></li>
+              <li><a href="#" class="dropdown-item" data-name="Christmas Day">Christmas</a></li>
+              <li><a href="#" class="dropdown-item" data-name="Chanukah/Hanukkah (first day)">Hanukkah</a>
+              <li class="divider" tabindex="-1"></li>
+              <li><a href="#" class="dropdown-item" data-name="other" id="other_event">Enter a birthday or anniversary</a></li>
+            </ul>
+        </div>
+
+
+
+
+        
+        <!-- Custom date range -->
+        <div class="input-field col s4" id="customDateForm">
+
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Enter your custom date</label>
+                    <input type="date" class="form-control" id="userProvidedDate" aria-describedby="emailHelp" placeholder="2019-06-01">
+                </div>
+                <button type="submit" class="btn btn-primary" id="otherSubmit" min="2019-04-26">Submit</button>
+            </form>
+
+        </div>
+
+
+      </div>
+
+      <!-- Empty div to show days reminaing -->
+      <div id="daysRemaining"></div>
+      <!-- Book Selections -->
+      <div>
+        <div class="col s12">
+          <p class="z-depth-4">Book Selections</p>
+        </div>
+        <br>
+        <div class="col s12">
+          <img class="responsive-img" src="assets/principles.png">
+          <img class="responsive-img" src="assets/theTattooistOfAuschwitz.jpeg">
+          <img class="responsive-img" src="assets/whereTheCrawdadsSing.jpeg">
+          <img class="responsive-img" src="assets/theCityInTheMiddleOfTheNight.jpeg">
+          <img class="responsive-img" src="assets/atTheMountainsEdge.jpeg">
+        </div>
+      </div>
+
+      <!-- JS for Date Selector -->
+      <script type="text/javascript">
+        $(document).ready(function () {
+           // initializing materializing
+           $('.dropdown-trigger').dropdown();
+
+$("#customDateForm").hide();
+
+$(".dropdown-item").on("click", calendar);
+
+$("#other_event").on("click", showForm);
+
+$("#otherSubmit").on("click", customDate);
+
+function showForm() {
+  $("#customDateForm").show();
+};
+
+function customDate() {
+
+  var occasion_date = new Date($("#userProvidedDate").val());
+  console.log(occasion_date);
+
+  var today = new Date();
+  var days_until = Math.round((occasion_date - today) / (1000 * 60 * 60 * 24));
+
+  $("#daysRemaining").html("Days Remaining: " + days_until);
+
+};
+
+function calendar() {
+
+  var holidayName = $(this).attr("data-name");
+
+  var apiKey = "c65ffe3f62969801df573185b16ae4961aa65370";
+  var queryURL = "https://calendarific.com/api/v2/holidays?country=US&year=2019&api_key=" + apiKey;
+
+  $.ajax({
+    url: queryURL,
+    method: "GET"
+  })
+    .then(function (response) {
+
+      var results = response.response.holidays;
+
+      for (var i = 0; i < results.length; i++) {
+
+        if (results[i].name === holidayName) {
+
+          var date = results[i].date.iso;
+
+          var today = new Date();
+          var occasion_date = new Date(date);
+
+          var days_until = Math.round((occasion_date - today) / (1000 * 60 * 60 * 24));
+
+          if (days_until < 0) {
+            days_until = days_until + 365;
+          }
+
+          $("#daysRemaining").html("Days Remaining: " + days_until);
+        }
+
+      };
+
+    });
+
+};
+        });
+
+// Days Left!
+          
+      </script>
+</body>
