--- a/project1/sample.html
+++ b/project1/sample.html
@@ -6,6 +6,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+  <!-- google fonts "poppins" -->
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <!-- My CSS -->
   <link rel="stylesheet" href="assets/style.css">
 
@@ -20,8 +22,9 @@
 <!-- Project Name! -->
 <header>
   <div>
-    <div class="col s12">
-      <p class="z-depth-4">Book 'em</p>
+    <div class="col s1"></div>
+    <div class="col s10 z-depth-4 header" id="header">
+      <p class="headerText"><b>Book 'em</b></p>
     </div>
   </div>
 </header>
@@ -32,16 +35,16 @@
     <div class="container">
       <div class="row">
         <div class="input-field col s3">
-          <input id="first_name" type="text" class="validate">
-          <label for="first_name">Age Group</label>
+          <input id="age_group" type="text" class="validate">
+          <label for="age_group">Age Group</label>
         </div>
         <div class="input-field col s3">
-          <input id="last_name" type="text" class="validate">
-          <label for="last_name">Price</label>
+          <input id="price" type="text" class="validate">
+          <label for="price">Price</label>
         </div>
         <div class="input-field col s3">
-          <input id="user_name" type="text" class="validate">
-          <label for="user_name">Email Address</label>
+          <input id="email_address" type="text" class="validate">
+          <label for="email_address">Email Address</label>
         </div>
 
         <!-- Submit Botton -->
@@ -92,15 +95,15 @@
       <!-- Book Selections -->
       <div>
         <div class="col s12">
-          <p class="z-depth-4">Book Selections</p>
+          <p class="z-depth-4 bookS">Book Selections</p>
         </div>
         <br>
         <div class="col s12">
-          <img class="responsive-img" src="assets/principles.png">
+          <!-- <img class="responsive-img" src="assets/principles.png">
           <img class="responsive-img" src="assets/theTattooistOfAuschwitz.jpeg">
           <img class="responsive-img" src="assets/whereTheCrawdadsSing.jpeg">
           <img class="responsive-img" src="assets/theCityInTheMiddleOfTheNight.jpeg">
-          <img class="responsive-img" src="assets/atTheMountainsEdge.jpeg">
+          <img class="responsive-img" src="assets/atTheMountainsEdge.jpeg"> -->
         </div>
       </div>
 
