--- a/project1/sample.html
+++ b/project1/sample.html
@@ -39,16 +39,15 @@
     <div class="container">
       <div class="row">
         <div class="input-field col s3">
-          <input id="Search" type="text" class="validate">
+          <input id="search" type="text" class="validate">
           <label for="Search">Search</label>
         </div>
 
         <!-- number dropdown selector  -->
         <div class="input-field col s3">
           <select id="numBooks">
-            <option value="" selected>Choose your option</option>
             <option value="1">1</option>
-            <option value="5">5</option>
+            <option value="5" selected>5</option>
             <option value="10">10</option>
           </select>
           <label>Quantity</label>
@@ -102,23 +101,11 @@
       <!-- Book Selections -->
       <div>
         <div class="col s12">
-          <p class="z-depth-4 bookS">Book Selections</p>
+          <p class="z-depth-4">Book Selections</p>
         </div>
         <br>
-        <div class="col s12">
-          <!-- <img class="responsive-img" src="assets/principles.png">
-          <img class="responsive-img" src="assets/theTattooistOfAuschwitz.jpeg">
-          <img class="responsive-img" src="assets/whereTheCrawdadsSing.jpeg">
-          <img class="responsive-img" src="assets/theCityInTheMiddleOfTheNight.jpeg">
-          <img class="responsive-img" src="assets/atTheMountainsEdge.jpeg"> -->
+        <div class="col s12" id="mediaSection">
+
         </div>
       </div>
-
-      <!-- Compiled and minified JavaScript
-       <script src="https://code.jquery.com/jquery-3.4.0.min.js"
-        integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script> -->
-      <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
-      <!-- <script src="assets/Javascript/books.js"></script> -->
-      <!-- <script src="assets/Javascript/date_api.js"></script> --> -->
-
 </body>
