--- a/project1/sample.html
+++ b/project1/sample.html
@@ -9,7 +9,7 @@
   <!-- google fonts "poppins" -->
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <!-- My CSS -->
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 
   <!--Let browser know website is optimized for mobile-->
