--- a/project1/sample.html
+++ b/project1/sample.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+
+  <meta charset="UTF-8">
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <!-- Compiled and minified CSS -->
@@ -11,15 +16,15 @@
   <!-- My CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
 
-
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--uncompressed JQuery-->
   <script src="https://code.jquery.com/jquery-3.4.0.js" integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
     crossorigin="anonymous"></script>
-
+  
+    <!--JavaScript-->  
   <script src="assets/Javascript/books.js"></script>
   <script src="assets/Javascript/date_api.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </head>
 
 <!-- Project Name! -->
