--- a/index.html
+++ b/index.html
@@ -109,17 +109,20 @@
      </button>
 
     <!-- Book Selections -->
+    <div class= "container">
     <div class="row">
-    <div class="col s1"></div>
+    <!-- <div class="col s1"></div> -->
     <div>
-      <div class="col s10">
+      <div class="col s12">
         <p class="z-depth-4">Book Selections</p>
       </div>
-      <div class="col s1"></div>
+      <!-- <div class="col s1"></div> -->
     </div>
       <br>
+
       <div class="col s12" id="mediaSection">
 
       </div>
     </div>
+  </div>
 </body>
